force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/Apttus_Config2__ClassificationHierarchy__c.object-meta.xml
<CustomObject>
    <description>Represents a category hierarchy</description>
    <label>Category Hierarchy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>