force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__HierarchyId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HierarchyId__c</fullName>
    <description>ID of the category hierarchy</description>
    <label>Hierarchy</label>
    <referenceTo>Apttus_Config2__ClassificationName__c</referenceTo>
    <relationshipLabel>Category Hierarchies</relationshipLabel>
    <relationshipName>CategoryHierarchies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>