force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__LargeImageSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LargeImageSize__c</fullName>
    <description>This will hold the size of the large image. width x height</description>
    <inlineHelpText>This will hold the size of the large image. width x height</inlineHelpText>
    <label>Large Image Size</label>
    <length>32</length>
    <type>Text</type>
</CustomField>